# bot_rust_sync

./: Cargo.toml  README.md  config.json.template  sslstream_vs_tcpstream.md
src/: audio.rs  config.rs  main.rs  twitch.rs
