[package]
name = "bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
openssl = { version = "0.10", features = ["vendored"] }
openssl-sys = "0.9"
colored = "2.0.4"

